package ignition.msgs;
option java_package = "com.ignition.msgs";
option java_outer_classname = "Int32";

/// \ingroup ignition.msgs
/// \interface Int32
/// \brief Integer message

message Int32
{
  /// \brief Integer data
  required int32 data = 1;
}
