package ignition.msgs;
option java_package = "com.ignition.msgs";
option java_outer_classname = "PublishProtos";

/// \ingroup ignition.msgs
/// \interface Publish
/// \brief Message that contains information about a publisher of data

message Publish
{
  optional string topic    = 1;
  optional string msg_type = 2;
  optional string host     = 3;
  optional uint32 port     = 4;
}
