package ignition.msgs;
option java_package = "com.ignition.msgs";
option java_outer_classname = "UInt32Protos";

/// \ingroup ignition.msgs
/// \interface UInt32
/// \brief Integer message

message UInt32
{
  /// \brief Integer data
  required uint32 data = 1;
}
